[project]
name = "psy-nav"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pymysql>=1.1.0",
]

[project.scripts]
psy-nav = "main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
